[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent-saas"
version = "0.1.0"
description = "Bookkeeping automation SaaS template with bank connect, categorization, reconciliation, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/finance-agent-saas"
Issues = "https://github.com/erron-ai/finance-agent-saas/issues"

[project.scripts]
finance-agent-saas = "finance_agent_saas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
